# treewalk_interpreter

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  Random.h  RuntimeError.cpp  RuntimeError.h  RuntimeValue.cpp  RuntimeValue.h  ast.cpp  ast.h  environment.cpp  environment.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  stacks.cpp  stacks.h  stdlib.cpp  stdlib.h  utilities.cpp  utilities.h  version.h
docs/: index.html  index2.html
docs/css/: prism.css  styleHome.css  styles.css  stylesRef.css
docs/examples/: compoundTypeExample.som  enums.som  example.som  structs.som  test.py  test.som
docs/guide/: expressions.html  learn-laven.html  type-annotations.html  variable-semantics.html
docs/images/: JHYN9P.avif
docs/reference/: array_reference.html  arrays.html  laven_reference.html  maps.html  math.html  stdlib.html  string.html
docs/scripts/: prism.js
docs/templates/: referenceSidebar.html  sidebar.html
src/: Version.h  main.cpp
src/ast/: Ast.cpp  Ast.h
src/error/: RuntimeError.cpp  RuntimeError.h
src/lexer/: Lexer.cpp  Lexer.h
src/parser/: Parser.cpp  Parser.h
src/runtime/: Environment.cpp  Environment.h  RuntimeValue.cpp  RuntimeValue.h
src/stdlib/: Stdlib.cpp  Stdlib.h
src/utilities/: Utilities.cpp
src/visitors/: DeclarationVisitor.cpp  DeclarationVisitor.h  EvaluateVisitor.cpp  EvaluateVisitor.h  FormatVisitor.cpp  FormatVisitor.h  (+1 more)
stdlib/: algorithm.som  array.som  core.som  main.py  math.som  new.py  string.som  test.som
test/: main  main.cpp  main.py  main.som  test.som
tests/: main.cpp  test.som
(+6 files in other folders)
